--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Supportti</title>
+    <title>SUPPORTTI Tecnologia e Informação</title>
     <style>
         * {
             margin: 0;
