Mudança Icone index.html

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>SUPPORTTI Tecnologia e Informação</title>
+    <link rel="icon" href="images/icone.ico" type="image/x-icon">
     <style>
         * {
             margin: 0;
@@ -138,32 +139,32 @@
             <h2>Assistência técnica especializada para você e sua empresa</h2>
             <div class="service-grid">
                 <div class="service-item">
-                    <img src="https://img.icons8.com/color/96/000000/technical-support.png" alt="Atendimento">
+                    <img src="images/technical-support.png" alt="Atendimento">
                     <h3>Atendimento ao Cliente</h3>
                     <p>Avulso ou contratual com foco na solução rápida e eficaz de problemas.</p>
                 </div>
                 <div class="service-item">
-                    <img src="https://img.icons8.com/color/96/000000/customer-support.png" alt="Atendimento Técnico">
+                    <img src="images/customer-support.png" alt="Atendimento Técnico">
                     <h3>Atendimento Técnico</h3>
                     <p>Manutenção imediata ou com agendamento, conforme sua necessidade.</p>
                 </div>
                 <div class="service-item">
-                    <img src="https://img.icons8.com/color/96/000000/network.png" alt="Manutenção de Redes">
+                    <img src="images/network.png" alt="Manutenção de Redes">
                     <h3>Manutenção de Redes</h3>
                     <p>Planejamento de redes de computadores, garantindo performance e segurança.</p>
                 </div>
                 <div class="service-item">
-                    <img src="https://img.icons8.com/color/96/000000/maintenance.png" alt="Manutenção Preventiva">
+                    <img src="images/maintenance.png" alt="Manutenção Preventiva">
                     <h3>Manutenção de Equipamentos</h3>
                     <p>Preventiva e reparos especializados para seus equipamentos.</p>
                 </div>
                 <div class="service-item">
-                    <img src="https://img.icons8.com/color/96/000000/server.png" alt="Gerenciamento de Servidores">
+                    <img src="images/server.png" alt="Gerenciamento de Servidores">
                     <h3>Gerenciamento de Servidores</h3>
                     <p>Gestão eficiente de servidores, com foco em performance e segurança.</p>
                 </div>
                 <div class="service-item">
-                    <img src="https://img.icons8.com/color/96/000000/wifi.png" alt="Redes Wireless">
+                    <img src="images/wifi.png" alt="Redes Wireless">
                     <h3>Soluções em Redes Wireless</h3>
                     <p>Configuração e otimização de redes sem fio para ambientes residenciais e empresariais.</p>
                 </div>
