--- a/ip.html
+++ b/ip.html
@@ -6,7 +6,7 @@
     <title>Mostrar IP do Cliente</title>
 </head>
 <body>
-    <h1>Bem-vindo!</h1>
+    <h1>Bem-vindo!!</h1>
     <p>Seu endereço IP é: <span id="ip-address">Carregando...</span></p>
 
     <script>
