--- a/ip.html
+++ b/ip.html
@@ -6,15 +6,15 @@
     <title>Mostrar IP do Cliente</title>
 </head>
 <body>
-    <h1>Bem-vindo!!</h1>
+    <h1>Bem-vindo!</h1>
     <p>Seu endereço IP é: <span id="ip-address">Carregando...</span></p>
 
     <script>
-        // Usando a API pública para obter o IP do cliente
-        fetch('https://api.myip.com')
+        // Usando a API pública httpbin para obter o IP do cliente
+        fetch('https://httpbin.org/ip')
             .then(response => response.json())
             .then(data => {
-                document.getElementById('ip-address').textContent = data.ip;
+                document.getElementById('ip-address').textContent = data.origin;
             })
             .catch(error => {
                 document.getElementById('ip-address').textContent = "Erro ao obter o IP";
