--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
     </div>
 
     <footer>
-        <p>SUPPORTTI Tecnologia e Informação Ltda – CNPJ 18.869.079/0001-57 © 2013-2024 Seu endereço IP é: <span id="ip-address">Carregando...</span>.</p>
+        <p>SUPPORTTI Tecnologia e Informação Ltda © 2013-2024 Seu IP: <span id="ip-address">Carregando...</span></p>
     </footer>
 	    <script>
         // Usando a API pública httpbin para obter o IP do cliente
