--- a/index.html
+++ b/index.html
@@ -203,7 +203,19 @@
                 loading="lazy">
             </iframe>
         </section>
+	   </div>
 
+	</section>
+	<!-- Código do widget da Elfsight -->
+        <section class="widget">
+            <h2 align="center">&nbsp;</h2>
+            <h2 align="center">Avaliação Clientes </h2>
+            <!-- Código do widget da Elfsight -->
+        <iframe 
+	 <script src="https://static.elfsight.com/platform/platform.js" async></script>
+	 <div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01"</div>
+	</iframe>
+        </section>
     </div>
 
     <footer>
