--- a/index.html
+++ b/index.html
@@ -203,21 +203,11 @@
                 loading="lazy">
             </iframe>
         </section>
-	   </div>
-
-	</section>
-	<!-- Código do widget da Elfsight -->
-        <section class="widget">
-            <h2 align="center">&nbsp;</h2>
-            <h2 align="center">Avaliação Clientes </h2>
-            <!-- Código do widget da Elfsight -->
-        <iframe 
-	 <script src="https://static.elfsight.com/platform/platform.js" async></script>
-	 <div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01"</div>
-	</iframe>
-        </section>
     </div>
-
+	<!-- Código do widget da Elfsight -->
+        <script src="https://static.elfsight.com/platform/platform.js" async></script>
+	<div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01" data-elfsight-app-lazy></div>
+	
     <footer>
         <p>SUPPORTTI Tecnologia e Informação Ltda © 2013-2024 Seu IP: <span id="ip-address">Carregando...</span></p>
     </footer>
