--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
     </div>
 	<!-- Depoimento Google Clientes -->
 	 <h2 align="center">&nbsp;</h2>
-            <h2 align="center">Nossos Clientes </h2>
+            <h2 align="center">Avaliação de Clientes </h2>
 	 <h2 align="center">&nbsp;</h2>
 	<!-- Código do widget da Elfsight -->
         <script src="https://static.elfsight.com/platform/platform.js" async></script>
