--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 	<div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01" data-elfsight-app-lazy></div>
 	
     <footer>
-        <p>Todos os direitos reservados Supportti © 2024 IP WEB : <span id="ip-address">Carregando...</span></p>
+        <p>Todos os direitos reservados Supportti © 2024 seu ip: <span id="ip-address">Carregando...</span></p>
     </footer>
 	    <script>
         // Usando a API pública httpbin para obter o IP do cliente
