Atualizar o index.html

--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 	
     <footer>
         <p>Todos os direitos reservados Supportti © 2024</p>
-        <p> Meu ip: <span id="ip-address">Carregando...</span></p>
+        <p> Meu ip <span id="ip-address">Carregando...</span></p>
     </footer>
 	    <script>
         // Usando a API pública httpbin para obter o IP do cliente
