--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
                 <div class="service-item">
                     <img src="images/server.png" alt="Gerenciamento de Servidores">
                     <h3>Gerenciamento de Servidores</h3>
-                    <p>Gestão eficiente de servidores, com foco em performance e segurança.</p>
+                    <p>Gestão eficiente de servidores, com foco em performance e segurança do cliente.</p>
                 </div>
                 <div class="service-item">
                     <img src="images/wifi.png" alt="Redes Wireless">
