--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 	<div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01" data-elfsight-app-lazy></div>
 	
     <footer>
-        <p>Todos os direitos reservados Supportti © 2024</p>
+        <p>Todos os direitos reservados a supportti tecnologia e informação ltda-me </p>
         <p> Meu ip <span id="ip-address">Carregando...</span></p>
     </footer>
 	    <script>
