--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 	
     <footer>
         <p>Todos os direitos reservados a supportti tecnologia e informação ltda-me </p>
-        <p> Meu ip <span id="ip-address">Carregando...</span></p>
+        <p> Seu endereço ip <span id="ip-address">Carregando...</span></p>
     </footer>
 	    <script>
         // Usando a API pública httpbin para obter o IP do cliente
