--- a/icms.html
+++ b/icms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cálculo e Rateio de ICMS </title>
+    <title>ICMS </title>
     <style>
         /* Estilos Gerais */
         * {
