--- a/icms.html
+++ b/icms.html
@@ -168,7 +168,7 @@
 
     <!-- Seção 1: Cálculo ICMS e IPI -->
     <div class="container">
-        <h1>CÁLCULO DE ICMS E IPI DE MERCADORIA COM NOTA FISCAL</h1>
+        <h1>PÁGINA PARA O CÁLCULO ICMS DE MERCADORIA COM NOTA</h1>
 
         <label for="valorNota">Valor Total da Nota Fiscal (R$):</label>
         <input type="number" id="valorNota" value="0">
@@ -185,7 +185,7 @@
         <label for="ipi">Valor do IPI na Nota Fiscal (R$):</label>
         <input type="number" id="ipi" value="0">
 
-        <button  class="green" onclick="calcularICMS()">Calcular Imposto</button>
+        <button  class="green" onclick="calcularICMS()">CALCULAR IMPOSTO A SER PAGO</button>
 
         <div id="resultado" class="result"></div>
     </div>
@@ -216,8 +216,8 @@
             </table>
         </div>
 
-        <button class="green" onclick="adicionarProduto()">Adicionar Produto</button>
-        <button class="green" onclick="calcularFrete()">Calcular Rateio</button>
+        <button class="green" onclick="adicionarProduto()">ADICIONAR PRODUTO</button>
+        <button class="green" onclick="calcularFrete()">EFETUAR O RATEIO DO IMPOSTO</button>
     </div>
 
     <script>
