--- a/custo.html
+++ b/custo.html
@@ -112,10 +112,10 @@
 </head>
 <body>
 
-    <h2>ICMS DEVIDO POR PRODUTO</h2>
+    <h2>DIVISÃO DE CUSTOS DA MERCADORIA</h2>
     
     <div class="blue-box">
-        <label>Valor de ICMS Devido (R$):</label>
+        <label>Valor de custo da mercadoria a ser dividido (R$):</label>
         <input type="number" id="freteTotal" value="0">
 
         <label>Taxa da Nota Fiscal e Maquineta de Cartão (%):</label>
