--- a/custo.html
+++ b/custo.html
@@ -118,7 +118,7 @@
         <label>Valor de custo da mercadoria a ser dividido (R$):</label>
         <input type="number" id="freteTotal" value="0">
 
-        <label>Taxa da Nota Fiscal e Maquineta de Cartão (%):</label>
+        <label>Taxa da nota fiscal e cartão (%):</label>
         <input type="number" id="taxaVenda" value="6.46" step="0.01">
 
         <table>
