--- a/custo.html
+++ b/custo.html
@@ -14,6 +14,7 @@
             color: white;
             padding: 15px;
             border-radius: 5px;
+            font-size: 16px;
         }
 
         /* Estilo para a caixa azul ao redor da parte do formulário e tabela */
