--- a/custo.html
+++ b/custo.html
@@ -139,7 +139,7 @@
         </table>
 
         <button class="green" onclick="adicionarProduto()">Adicionar Produto</button>
-        <button class="green" onclick="calcularFrete()">Calcular Imposto</button>
+        <button class="green" onclick="calcularFrete()">Calcular Divisão</button>
     </div>
 
     <script>
