--- a/icms.html
+++ b/icms.html
@@ -24,6 +24,7 @@
             background-color: #007bff; /* Azul escuro */
             padding: 10px;
             border-radius: 5px;
+            font-size: 16px;
         }
         label {
             display: block;
