--- a/index.html
+++ b/index.html
@@ -168,6 +168,11 @@
                     <h3>Soluções em Redes Wireless</h3>
                     <p>Configuração e otimização de redes sem fio para ambientes residenciais e empresariais.</p>
                 </div>
+		<div class="service-item">
+   		    <img src="images/certificado-digital.png" alt="Certificado Digital">
+   	 	    <h3>Certificado Digital A1 e A3</h3>
+    		    <p>Emissão para pessoa física e jurídica, com segurança e agilidade.</p>
+		</div>
             </div>
         </section>
 
@@ -213,7 +218,7 @@
 	<div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01" data-elfsight-app-lazy></div>
 	
     <footer>
-        <p>Todos os direitos reservados a supportti tecnologia e informação ltda-me </p>
+        <p>Todos os direitos reservados. Supportti Tecnologia </p>
         <p> Seu endereço ip <span id="ip-address">Carregando...</span></p>
     </footer>
 	    <script>
