--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
 	
     <footer>
         <p>Todos os direitos reservados. Supportti Tecnologia </p>
-        <p> Seu endereço ip <span id="ip-address">Carregando...</span></p>
+        <p> Seu endereço ip <span id="ip-address">Carregando...</span>  Visitantes: <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0006&nbdigits=5&type=page&initCount=0" title="Contador de visitas" alt="Contador de visitas" style="vertical-align: middle;" </p>
     </footer>
 	    <script>
         // Usando a API pública httpbin para obter o IP do cliente
