--- a/index.html
+++ b/index.html
@@ -219,7 +219,16 @@
 	
     <footer>
         <p>Todos os direitos reservados. Supportti Tecnologia </p>
-        <p> Seu endereço ip <span id="ip-address">Carregando...</span>  Visitantes: <img src="https://hitwebcounter.com/counter/counter.php?page=1234567&style=0006&nbdigits=5&type=page&initCount=0" title="Contador de visitas" alt="Contador de visitas" style="vertical-align: middle;" </p>
+        <p> Seu ip <span id="ip-address">Carregando...</span> 
+	 Visitantes: 
+        <a href="https://www.hitwebcounter.com" target="_blank">
+            <img src="https://hitwebcounter.com/counter/counter.php?page=20901725&style=0007&nbdigits=9&type=page&initCount=1" 
+                 title="Counter Widget" 
+                 alt="Visit counter For Websites" 
+                 style="vertical-align: middle;" 
+                 border="0" />
+        </a>
+	</p>
     </footer>
 	    <script>
         // Usando a API pública httpbin para obter o IP do cliente
