--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                 <div class="service-item">
                     <img src="images/technical-support.png" alt="Atendimento">
                     <h3>Atendimento ao Cliente</h3>
-                    <p>Serviço Avulso ou contratual com resolução rápida e eficaz de problemas.</p>
+                    <p>Serviço avulso ou contratual com resolução rápida e eficaz de problemas.</p>
                 </div>
                 <div class="service-item">
                     <img src="images/customer-support.png" alt="Atendimento Técnico">
