--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 <div class="service-item">
                     <img src="images/maintenance.png" alt="Manutenção Preventiva">
                     <h3>Manutenção de Equipamentos</h3>
-                    <p>Preventiva e reparos especializados para notebook computador e servidor.</p>
+                    <p>Reparos especializados para notebook computador e servidor.</p>
                 </div>
                 <div class="service-item">
                     <img src="images/server.png" alt="Gerenciamento de Servidores">
