--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>SUPPORTTI Tecnologia e Informação</title>
+    <title>SupportTI</title>
     <link rel="icon" href="images/favicon.ico" type="image/x-icon">
     <style>
         * {
@@ -218,7 +218,7 @@
 	<div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01" data-elfsight-app-lazy></div>
 	
     <footer>
-        <p>Todos os direitos reservados. Supportti Tecnologia </p>
+        <p>Todos os direitos reservados. SupportTI Tecnologia </p>
         <p> Seu ip <span id="ip-address">Carregando...</span></p>
     </footer>
 	    <script>
