--- a/avaliacao.html
+++ b/avaliacao.html
@@ -67,7 +67,7 @@
   <div class="container">
     <h2></h2>
     <img src="imagem-avaliacao.png" alt="SupportTI Avaliação" />
-    <a class="botao" href="https://maps.app.goo.gl/WyEByAzqoChkXhip7?g_st=ipc" target="_blank">
+    <a class="botao" href="https://g.page/r/CWQYaiWpal-7EBM/review" target="_blank">
       Avaliar agora ⭐
     </a>
   </div>
