--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
   <div class="elfsight-app-c38e3242-6a40-428f-a83f-5df35c73fc01" data-elfsight-app-lazy></div>
 
   <footer>
-    <p>SupportTI Tecnologia e Informação Ltda-me.</p>
+    <p>© 2026 SupportTI Tecnologia e Informação – Todos os direitos reservados</p>
     <p>Seu IP: <span id="ip-address">Carregando...</span></p>
   </footer>
 
@@ -208,4 +208,5 @@
   </script>
 </body>
 </html>
+
 
