--- a/index.html
+++ b/index.html
@@ -3,7 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SupportTI</title>
+  <title>SupportTI | Suporte de de informática em Santo Antônio de Jesus - BA</title>
+  <meta name="description" content="Especialistas em Suporte Técnico, Manutenção de Redes, Servidores e Certificado Digital A1/A3. Atendimento rápido em Santo Antônio de Jesus e região.">
+  <meta name="keywords" content="Suporte de TI, Manutenção de Computadores, Redes, Servidores, Certificado Digital, Santo Antônio de Jesus, Bahia">
+  <meta name="author" content="SupportTI">
+  <meta property="og:title" content="SupportTI - Tecnologia e Informação">
+  <meta property="og:description" content="Soluções completas em TI para sua empresa ou residência.">
+  <meta property="og:image" content="https://supporttionline.com.br/images/pic00.png">
+  <meta property="og:url" content="https://supporttionline.com.br/">
+  <meta property="og:type" content="website">
+
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
   <style>
@@ -208,5 +217,6 @@
   </script>
 </body>
 </html>
+
 
 
