--- a/index.html
+++ b/index.html
@@ -3,18 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SupportTI | Suporte de de informática em Santo Antônio de Jesus - BA</title>
-  <meta name="description" content="Especialistas em Suporte Técnico, Manutenção de Redes, Servidores e Certificado Digital A1/A3. Atendimento rápido em Santo Antônio de Jesus e região.">
-  <meta name="keywords" content="Suporte de TI, Manutenção de Computadores, Redes, Servidores, Certificado Digital, Santo Antônio de Jesus, Bahia">
-  <meta name="author" content="SupportTI">
-  <meta property="og:title" content="SupportTI - Tecnologia e Informação">
-  <meta property="og:description" content="Soluções completas em TI para sua empresa ou residência.">
-  <meta property="og:image" content="https://supporttionline.com.br/images/pic00.png">
-  <meta property="og:url" content="https://supporttionline.com.br/">
-  <meta property="og:type" content="website">
-
+  <title>SupportTI  | Suporte de informática em Santo Antônio de Jesus - BA</title>
   <link rel="icon" href="images/favicon.ico" type="image/x-icon">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;500;700&display=swap" rel="stylesheet">
+  <style>
+
   <style>
     * {
       margin: 0;
@@ -189,7 +182,7 @@
 
     <!-- Mapa -->
     <section class="map">
-	  <h2></h2>
+	
       <h2>Nossa Localização</h2>
 	        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3700.734050640106!2d-39.263452425098166!3d-12.96872235975107!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x73e2a40d721cdaf%3A0xbb5f6aa9256a1864!2sSUPPORTTI%20Tecnologia%20e%20Informa%C3%A7%C3%A3o!5e1!3m2!1spt-BR!2sbr!4v1729778967055!5m2!1spt-BR!2sbr" allowfullscreen="" loading="lazy"></iframe>
     </section>
@@ -217,6 +210,7 @@
   </script>
 </body>
 </html>
+
 
 
 
