--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 <body>
 
   <header>
-    <h1 align="center"><img src="images/pic00.png" alt="logo" width="45%"></h1>
+    <h1 align="center"><img src="images/pic00.png" alt="SupportTI - Suporte Técnico em Santo Antônio de Jesus" width="45%"></h1>
   </header>
 
   <div class="container">
@@ -210,6 +210,7 @@
   </script>
 </body>
 </html>
+
 
 
 
